# OGLR

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ext/: CMakeLists.txt
include/: OGLR.h  OGR.h
src/: Camera.cpp  Camera.h  MeshComponent.cpp  MeshComponent.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  main.cpp
src/Buffers/: IndexBuffer.cpp  IndexBuffer.h  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp  VertexBufferLayout.h
src/app/: Application.cpp  Application.h  Input.cpp  Input.h  Layer.cpp  Layer.h
src/buffers/: Buffer.cpp  Buffer.h  IndexBuffer.cpp  IndexBuffer.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h  VertexArray_Attrib_Impl.cpp  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
src/renderer/: MeshComponent.cpp  MeshComponent.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Shader_Unif_Impl.cpp  Terrain.cpp  Terrain.h  Texture.cpp  Texture.h  Vertex.h
src/utils/: Camera.cpp  Camera.h  Terrain.cpp  Terrain.h  debug.cpp  debug.h  utils.h
test_res/shaders/: background.frag.glsl  background.vert.glsl  colored_obj.frag.glsl  colored_obj.vert.glsl  compute_NHMap.glsl  compute_grad_height.glsl  compute_height.glsl  compute_normal.glsl  compute_vertices.glsl  compute_vertices_real.glsl  func_FBM.glsl  particles.frag.glsl  particles.glsl  particles.vert.glsl  terrain_chunk.frag.glsl  terrain_chunk.vert.glsl  terrain_shader.frag.glsl  terrain_shader.vert.glsl  test.frag.glsl  textured_simple.frag.glsl  textured_simple.vert.glsl
test_res/shaders/particle_shaders/: compute_particle_densities.glsl  kernels.glsl  particles.frag.glsl  particles.glsl  particles.vert.glsl
test_src/: ParticleLayer.cpp  ParticleLayer.h  TerrainLayer.cpp  TerrainLayer.h  TestLayer.cpp  TestLayer.h  main.cpp
test_src/terrain/: Terrain.cpp  Terrain.h
